--- a/Compety_Hackathon.ipynb
+++ b/Compety_Hackathon.ipynb
@@ -1602,7 +1602,8 @@
     "\n",
     "#### Using personalized promotions can effectively drive customers into shops, increasing the likelihood of in-store purchases\n",
     "\n",
-    "## 4. Regular Performance Analysisa\n",
+    "## 4. Regular Performance Analysis\n",
+    "\n",
     "#### Regular analysis of performance data with balanced datasets helps to derive accurate insights and improve strategies.\r\n",
     "\n"
    ]
